...
    "Hard Mode is on — this list is read-only until the block ends." : {

    },
    "Hard Mode is on — this rule is locked until the block ends." : {

    },
    "Home" : {

    },
    "Keep Editing" : {

    },
    "List Name" : {
...
            "state" : "translated",
            "value" : "This block can’t be paused while it’s active."
          }
        }
      }
    },
    "Rules" : {

    },
    "Save List" : {

    },
    "Schedule starting soon" : {
...
